@startuml

'Code généré automatiquement ;>
skinparam style strictuml
hide empty members
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam classbackgroundColor LightGoldenRodYellow
skinparam classbordercolor red
skinparam classattribute none
skinparam classborderthickness 2


class pumlFromJava.Java2Puml {

	 + <<Create>> Java2Puml()
	 + main(args : String[*]) {static}
}


class pumlFromJava.PumlDiagram {

	 + <<Create>> PumlDiagram()
	 + generatePuml(fileName : String, path : String, code : String)
}


interface pumlFromJava.PumlElement <<interface>>  {
	 + getDccCode() : String {abstract}
	 + getDcaCode() : String {abstract}
	 + getSimpleName() : String {abstract}
}

class pumlFromJava.PumlEnumAttribut implements pumlFromJava.PumlElement {

	 + <<Create>> PumlEnumAttribut(element : Element)
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
}
	PumlEnumAttribut o--> "1\n -element" javax.lang.model.element.Element


class pumlFromJava.PumlInterface implements pumlFromJava.PumlElement {

	 + <<Create>> PumlInterface(element : Element)
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getEnclosingElement() : String
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
	 + getKind() : String
	 - getMethods() : String
	 + getSuperClass() : String
}
	PumlInterface o--> "1\n -element" javax.lang.model.element.Element
	PumlInterface o--> "0 .. *\n -methods" pumlFromJava.PumlMethod


class pumlFromJava.PumlPackage implements pumlFromJava.PumlElement {

	 + <<Create>> PumlPackage(element : Element)
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getKind() : String
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
	 + getDccElements() : String
	 + getDcaElements() : String
}
	PumlPackage o--> "1\n -element" javax.lang.model.element.Element
	PumlPackage o--> "0 .. *\n -elements" pumlFromJava.PumlElement


class pumlFromJava.PumlConstructor extends pumlFromJava.PumlMethod {

	 + <<Create>> PumlConstructor(element : Element)
	 + getDccCode() : String {redefines PumlMethod::getDccCode}
}


class pumlFromJava.PumlDoclet implements jdk.javadoc.doclet.Doclet {

	 + <<Create>> PumlDoclet()
	 + init(locale : Locale, reporter : Reporter) {redefines Doclet::init}
	 + getName() : String {redefines Doclet::getName}
	 + getSupportedOptions() : Option[*] {redefines Doclet::getSupportedOptions}
	 + getSupportedSourceVersion() : javax.lang.model.SourceVersion {redefines Doclet::getSupportedSourceVersion}
	 + run(environment : DocletEnvironment) : Boolean {redefines Doclet::run}
	 + generateDcc(environment : DocletEnvironment) : String
	 + generateDca(environment : DocletEnvironment) : String
}
	PumlDoclet o--> "1\n -path" pumlFromJava.PumlOptionPATH
	PumlDoclet o--> "1\n -out" pumlFromJava.PumlOptionOUT
	PumlDoclet o--> "1\n -dcc" pumlFromJava.PumlOptionDCC


class pumlFromJava.PumlOptionPATH implements jdk.javadoc.doclet.Doclet.Option {
	 - path : String 

	 + <<Create>> PumlOptionPATH()
	 + getArgumentCount() : Integer {redefines Option::getArgumentCount}
	 + getDescription() : String {redefines Option::getDescription}
	 + getKind() : jdk.javadoc.doclet.Doclet.Option.Kind {redefines Option::getKind}
	 + getNames() : String[*] {redefines Option::getNames}
	 + getParameters() : String {redefines Option::getParameters}
	 + process(option : String, arguments : String[*]) : Boolean {redefines Option::process}
	 + getPath() : String
}


class pumlFromJava.PumlOptionOUT implements jdk.javadoc.doclet.Doclet.Option {
	 - name : String 

	 + <<Create>> PumlOptionOUT()
	 + getArgumentCount() : Integer {redefines Option::getArgumentCount}
	 + getDescription() : String {redefines Option::getDescription}
	 + getKind() : jdk.javadoc.doclet.Doclet.Option.Kind {redefines Option::getKind}
	 + getNames() : String[*] {redefines Option::getNames}
	 + getParameters() : String {redefines Option::getParameters}
	 + process(option : String, arguments : String[*]) : Boolean {redefines Option::process}
	 + getName() : String
}


class pumlFromJava.PumlOptionDCC implements jdk.javadoc.doclet.Doclet.Option {
	 - isDcc : Boolean 

	 + <<Create>> PumlOptionDCC()
	 + getArgumentCount() : Integer {redefines Option::getArgumentCount}
	 + getDescription() : String {redefines Option::getDescription}
	 + getKind() : jdk.javadoc.doclet.Doclet.Option.Kind {redefines Option::getKind}
	 + getNames() : String[*] {redefines Option::getNames}
	 + getParameters() : String {redefines Option::getParameters}
	 + process(option : String, arguments : String[*]) : Boolean {redefines Option::process}
	 + isDcc() : Boolean
}


class pumlFromJava.PumlEnum implements pumlFromJava.PumlElement {

	 + <<Create>> PumlEnum(element : Element)
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getEnclosingElement() : String
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
	 + getKind() : String
	 + getDccAttributs() : String
	 + getDcaAttributs() : String
	 + getSuperClass() : String
	 + getInterfaces() : String
}
	PumlEnum o--> "1\n -element" javax.lang.model.element.Element
	PumlEnum o--> "0 .. *\n -attributs" pumlFromJava.PumlEnumAttribut


class pumlFromJava.PumlClass implements pumlFromJava.PumlElement {

	 + <<Create>> PumlClass(element : Element)
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
	 + getEnclosingElement() : String
	 + getKind() : String
	 - getDccAttributs() : String
	 - getDcaAttributs() : String
	 - getDccMethods() : String
	 + getSuperClass() : String
	 + getInterfaces() : String
	 + getDccRelations() : String
	 + getDcaRelations() : String
	 + getOthersModifiers() : String
}
	PumlClass o--> "1\n -element" javax.lang.model.element.Element
	PumlClass o--> "0 .. *\n -attributs" pumlFromJava.PumlAttribut
	PumlClass o--> "0 .. *\n -methods" pumlFromJava.PumlMethod
	PumlClass o--> "0 .. *\n -relations" pumlFromJava.PumlRelation
	PumlClass o--> "1\n -modifier" pumlFromJava.PumlModifier


class pumlFromJava.PumlMethod implements pumlFromJava.PumlElement {

	 + <<Create>> PumlMethod(element : Element)
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getEnclosingElement() : String
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
	 + getType() : String
	 + getAccessLevel() : String
	 + getParameters() : String
	 + getOthersModifiers() : String
	 + getAnnotation() : String
	 - checkSuperClasses(typeMirror : TypeMirror) : String
	 - checkInterfaces(typeMirror : TypeMirror) : String
}
	PumlMethod o--> "1\n -type" pumlFromJava.PumlType
	PumlMethod o--> "1\n -element" javax.lang.model.element.Element
	PumlMethod o--> "1\n -modifier" pumlFromJava.PumlModifier


class pumlFromJava.PumlAttribut implements pumlFromJava.PumlElement {

	 + <<Create>> PumlAttribut(element : Element)
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
	 + getType() : String
	 + getAccessLevel() : String
	 + getOthersModifiers() : String
}
	PumlAttribut o--> "1\n -element" javax.lang.model.element.Element
	PumlAttribut o--> "1\n -type" pumlFromJava.PumlType
	PumlAttribut o--> "1\n -modifier" pumlFromJava.PumlModifier


class pumlFromJava.PumlRelation implements pumlFromJava.PumlElement {

	 + <<Create>> PumlRelation(element : Element)
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getMultiplicity() : String
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getAccessLevel() : String
	 + getType() : String
	 + getSuperClass() : String
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
}
	PumlRelation o--> "1\n -element" javax.lang.model.element.Element
	PumlRelation o--> "1\n -type" pumlFromJava.PumlType
	PumlRelation o--> "1\n -modifier" pumlFromJava.PumlModifier


class pumlFromJava.PumlModifier implements pumlFromJava.PumlElement {

	 + <<Create>> PumlModifier(modifiers : Modifier[*])
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
	 + getAccessLevel() : String
	 + getClassModifiers() : String
	 + getSimpleModifiers() : String
}
	PumlModifier o--> "0 .. *\n -modifiers" javax.lang.model.element.Modifier


class pumlFromJava.PumlType implements pumlFromJava.PumlElement {
	 - primitiveObjects : String[*]  {static}

	 + <<Create>> PumlType(type : TypeMirror)
	 + getDccCode() : String {redefines PumlElement::getDccCode}
	 + getDcaCode() : String {redefines PumlElement::getDcaCode}
	 + getSimpleName() : String {redefines PumlElement::getSimpleName}
	 + getLongName() : String
	 + isPrimitive() : Boolean
	 - translateToPuml() : String
}
	PumlType o--> "1\n -type" javax.lang.model.type.TypeMirror




@enduml